Add blank responsive sass. Update splash

--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 layout: splash
 title: Jason Byck
 ---
+
+<section id='splash'>
+  <div class='row'>
+    <h1 class='about'>
+      I'm Jason, a software engineer from Toronto, Canada, currently working at <a href="http://www.quandl.com/about">Quandl</a>.
+    </h2>
+  </div>
+</section>
