--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@ title: Jason Byck
 
 <section id='splash'>
   <div class='row'>
-    <h1 class='about'>
+    <h1>
       I'm Jason, a software engineer from Toronto, Canada, currently working at <a href="http://www.quandl.com/about">Quandl</a>.
-    </h2>
+    </h1>
+    <ul class='external text-center'>
+      <li>
+        <a href='https://www.github.com/jbyck'><i class='foundicon-github'></i></a>
+      </li>
+      <li>
+        <a href="http://www.linkedin.com/in/jasonbyck"><i class='foundicon-linkedin'></i></a>
+      </li>
+      <li>
+        <a href='https://www.twitter.com.jbyck'><i class='foundicon-twitter'></i></a>
+      </li>
+      <li>
+        <a href='http://www.instagram.com/jbyck'><i class='foundicon-instagram'></i></a>
+      </li>
+    </ul>
   </div>
 </section>
