Modify default highlight. Add icon for email contact.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ title: Jason Byck
       <li>
         <a href='http://www.instagram.com/jbyck'><i class='foundicon-instagram'></i></a>
       </li>
+      <li>
+        <a href="mailto:jason@jasonbyck.com"><i class='foundicon-chat'></i></a>
+      </li>
     </ul>
   </div>
 </section>
