Add typekit. Mobile css for external links.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Jason Byck
 <section id='splash'>
   <div class='row'>
     <h1>
-      I'm Jason, a software engineer from Toronto, Canada, currently working at <a href="http://www.quandl.com/about">Quandl</a>.
+      I'm Jason, a software engineer from Toronto, Canada. <br />
     </h1>
     <ul class='external text-center'>
       <li>
@@ -16,7 +16,7 @@ title: Jason Byck
         <a href="http://www.linkedin.com/in/jasonbyck"><i class='foundicon-linkedin'></i></a>
       </li>
       <li>
-        <a href='https://www.twitter.com.jbyck'><i class='foundicon-twitter'></i></a>
+        <a href='https://www.twitter.com/jbyck'><i class='foundicon-twitter'></i></a>
       </li>
       <li>
         <a href='http://www.instagram.com/jbyck'><i class='foundicon-instagram'></i></a>
