Center the splash

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: splash
 title: Jason Byck
 ---
 
-<section id='splash'>
+<section id='splash' class='text-center'>
   <div class='row'>
     <h1>
       I'm Jason, a software engineer from Toronto, Canada. <br />
     </h1>
-    <ul class='external text-center'>
+    <ul class='external'>
       <li>
         <a href='https://www.github.com/jbyck'><i class='foundicon-github'></i></a>
       </li>
